2013-02-25 Raphael Neider <rneider AT web.de>

	* src/pic14/ralloc.c (packRegsForOneuse):
	  prevent NULL ptr dereference (fixes bug #3605966)

2013-02-24 Raphael Neider <rneider AT web.de>

	* device/lib/pic14/libsdcc/ulong2fs.c:
	  prefer 'while (COND) {}' over 'if (COND) do {} while (COND)'
	* src/pic14/gen.c (genAnd):
	  fix for loop condition in ulong2fs.c (fixes #3605855)
	* device/lib/pic14/libm/Makefile.am:
	  fix typo in CFLAGS for libme (fixes #3605860)

2013-02-17 Raphael Neider <rneider AT web.de>

	* device/non-free/lib/pic14/configure.in,
	  device/non-free/lib/pic16/configure.ac:
	  Check and display devices missing in gputils before proceeding
	  and request updating gputils if any to-be-supported is missing
	* device/non-free/lib/pic14/configure,
	  device/non-free/lib/pic16/configure:
	  regenerated

2013-02-13 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl:
	  Use default sfr and sbit names if no header file.

2013-02-10 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Adds used count to sfr, sbit and bit lists.

2013-02-08 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: bugfix

2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Improved recognition of jump tables.

2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Improved recognition of jump tables and
	  bugfix.

2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Bugfix and count of references in the RAM.

2013-02-01 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Small refinements.

2013-01-31 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Use IRAM key in name-list file.

2013-01-29 Molnar Karoly <molnarkaroly AT users.sf.net>
